--- a/src/index.css
+++ b/src/index.css
@@ -33,5 +33,5 @@ html {
 }
 
 div {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
 }
